welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:23: error: identifier expected but ';' found.
var sol:Boolean=false
^